--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "uuid": "^8.3.2",
-    "v-mask": "^2.2.4",
     "vue": "^2.6.11",
     "vue-fragment": "^1.5.2",
     "vue-i18n": "^8.24.4",
     "vue-router": "^3.2.0",
+    "vue-the-mask": "^0.11.1",
     "vue-uuid": "^2.0.2",
     "vuex": "^3.4.0"
   },
