--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^2.0.2",
+    "@popperjs/core": "^2.9.2",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "uuid": "^8.3.2",
